# neohook

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: README.md  attach_export.rs  closure_detour.rs  code_from_pointer_thunk.rs  com_vtable_hook.rs  d3d11_present.rs  d3d9_endscene.rs  delay_hook.rs  eat_hook.rs  force_keystroke_to_a.rs  iat_messagebox.rs  iat_sleep.rs  inline_sleep.rs  int3_hook.rs  introspect.rs  managed_gateway_chain.rs  midhook.rs  opengl_swapbuffers.rs  pattern_scan.rs  resolve_relative.rs  simple_hook.rs  trace_detour.rs  transaction_detach.rs  transaction_two_hooks.rs  veh_hook.rs  vtable_hook.rs  vtable_instance_hook.rs  watchdog.rs
include/: neohook.h  neohook.hpp  neohook_cpp.hpp
src/: alloc.rs  api.rs  cfg.rs  code.rs  delay.rs  disasm.rs  eat.rs  export_sweep.rs  gateway.rs  iat.rs  int3.rs  introspect.rs  lib.rs  mem.rs  midhook.rs  module.rs  pe.rs  reclaim.rs  reentrancy.rs  registry.rs  resolve.rs  scan.rs  symbols.rs  threads.rs  trace.rs  transaction.rs  veh.rs  vtable.rs  watchdog.rs
tests/: alloc_integration.rs  api_integration.rs  cfg.rs  code_from_pointer.rs  concurrent_transactions.rs  cpp_com_vtable.rs  eat_hooks.rs  enable_disable.rs  error_messages.rs  export_roundtrip.rs  ffi_api.rs  ffi_introspection.rs  ffi_link_test.cpp  hook_chaining_integration.rs  hook_stability.rs  iat_error_integration.rs  inline_dedup.rs  integration_test.rs  introspect.rs  macro_tests.rs  mem_integration.rs  midhook.rs  module_integration.rs  pattern_scan.rs  reentrancy.rs  stress_test.rs  thread_integration.rs  transaction_detach.rs  veh_hooks.rs  vtable_hooks.rs
