[package]
name = "neohook"
version = "0.11.0"
edition = "2024"
rust-version = "1.88"
description = "A powerful, transactional, thread-safe function hooking library for Windows (x86/x64), written in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aliendwarf/neohook"
readme = "README.md"
keywords = [
    "hooking",
    "detours",
    "win32",
    "x86_64",
    "debugging",
]
categories = ["os::windows-apis", "development-tools::debugging"]
exclude = ["/.github", "/.gitignore", "/*.pdb", "/.vscode", "/target"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
doctest = false

[features]
generate-headers = ["dep:cbindgen"]

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
] }
iced-x86 = { version = "1.21.0", default-features = false, features = [
    "decoder",
    "instr_info",
    "no_std",
    "encoder",
    "block_encoder",
    "no_vex",
    "no_evex",
    "no_xop",
    "no_d3now",
] }

[dev-dependencies]
# Extra windows-sys surface used only by examples (windowing / message loop /
# OpenGL context setup). Direct3D 11 / 9 are not in windows-sys, so those
# examples load them at runtime and read the COM vtable by hand.
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
cbindgen = { version = "0.29.2", optional = true }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
